@startuml
package bonus {
    class BombBonus  {
        - Bomb bomb
        - SpriteStore spriteStore
        + BombBonus(BombermanGame game, double xPosition, double yPosition, Sprite sprite)
        + void collidedWith(IMovable other)
        + void explode()
        + void hitEnemy()
        + boolean isEnemy()
        + boolean isPlayer()
        + boolean isExplosion()
        + boolean isEnemyWithLife()
        + boolean isLava()
        + boolean isBomb()
        + boolean isFakeBomb()
        + boolean isBigBomb()
        + boolean isInvisibleBonus()
        + boolean isLifeBonus()
        + boolean isBombBonus()
        + void degrade(Wall wall)
    }

    class LifeBonus  {
        - SpriteStore spriteStore
        + LifeBonus(BombermanGame game, double xPosition, double yPosition, Sprite sprite)
        + void collidedWith(IMovable other)
        + void explode()
        + void hitEnemy()
        + boolean isEnemy()
        + boolean isPlayer()
        + boolean isExplosion()
        + boolean isEnemyWithLife()
        + boolean isLava()
        + boolean isBomb()
        + boolean isFakeBomb()
        + boolean isBigBomb()
        + boolean isInvisibleBonus()
        + boolean isLifeBonus()
        + boolean isBombBonus()
        + void degrade(Wall wall)
    }

    class InvisibleBonus {
        - SpriteStore spriteStore
        + InvisibleBonus(BombermanGame game, double xPosition, double yPosition, Sprite sprite)
        + void collidedWith(IMovable other)
        + void explode()
        + void hitEnemy()
        + boolean isEnemy()
        + boolean isPlayer()
        + boolean isExplosion()
        + boolean isEnemyWithLife()
        + boolean isLava()
        + boolean isBomb()
        + boolean isFakeBomb()
        + boolean isBigBomb()
        + boolean isInvisibleBonus()
        + boolean isLifeBonus()
        + boolean isBombBonus()
        + void degrade(Wall wall)
    }

    interface IWallState {
        + void explode()
        + void hitEnemy()
        + boolean isEnemy()
        + boolean isPlayer()
        + boolean isExplosion()
        + boolean isEnemyWithLife()
        + boolean isLava()
        + boolean isBomb()
        + boolean isFakeBomb()
        + boolean isBigBomb()
        + boolean isInvisibleBonus()
        + boolean isLifeBonus()
        + boolean isBombBonus()
        + void degrade(Wall wall)
    }

    class AbstractMovable {
        + boolean move(long delta)
        + void collidedWith(IMovable other)
    }

    interface IMovable {
        + boolean move(long delta)
        + void collidedWith(IMovable other)
    }

    class SpriteStore {
        + static SpriteStore getInstance()
        + Sprite getSprite(String name)
    }

    class Sprite {
    }
}

BombBonus --|> AbstractMovable
LifeBonus --|> AbstractMovable
InvisibleBonus --|> AbstractMovable
BombBonus ..|> IWallState
LifeBonus ..|> IWallState
InvisibleBonus ..|> IWallState
AbstractMovable ..|> IMovable
SpriteStore --> Sprite
InvisibleBonus --> SpriteStore
LifeBonus --> SpriteStore
BombBonus --> SpriteStore
@enduml